--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 /* font import */
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 *{
-    font-family: 'Open Sans', sans-serif
+    font-family: 'Open Sans', sans-serif;
+    
 }
 
 /*---------------- 
@@ -35,6 +36,10 @@ a:hover.button-style{
      
  }
 
+ .margin-y{
+    margin: 60px 0;
+ }
+
 
 /*---------------------------------
  header area style start here
@@ -42,7 +47,7 @@ a:hover.button-style{
 .main-header{
     display: flex;
     justify-content: space-between;
-    margin: 50px 0;
+    
 }
 .logo h2{
     font-size: 24px;
@@ -97,3 +102,86 @@ banner-section css strat here
     width: 70%;
     
 }
+
+/*----------------------------------
+ company brand style start here 
+------------------------------------ */
+.company-brand{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 25px 0;
+    border: 2px solid;
+    border-image: linear-gradient(rgba(221, 228, 235),rgba(221, 228, 235, 60%));
+    border-image-slice: 1 0 5;
+   
+}
+/*----------------------------------
+ collection style start here 
+------------------------------------ */
+
+.collection-title h2{
+    text-align: center;
+    color: #3A3A3A;
+    font-size: 28px;
+    font-weight: 600;
+
+}
+
+.collections{
+    width: 85%;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-gap: 30px;
+    
+    
+}
+.collection-item{
+    box-shadow: 2px 2px 15px 5px rgb(170 226 255);
+    border-radius: 5px;
+}
+
+.collection-image{
+    padding:17px 14px;
+    
+}
+.collection-details{
+    padding:0 17px 15px;
+}
+.collection-details h2{
+    margin: 0;
+    color: #18191F;
+    font-size: 28px;
+}
+
+.collection-details h5,p{
+    margin: 6px 0;
+    
+}
+
+.rating i{
+    color: #FB8200;
+    font-size: 10px;
+}
+.rating span{
+    font-size: 14px;
+    margin-left: 10px;
+    color: #5E6366;
+}
+.collection-details h5{
+    color: #222222;
+    font-size: 24px;
+    font-weight: normal;
+}
+.collection-image img{
+    width: 100%;    
+    
+    
+}
+.collection-details p{
+    font-size: 14px;
+    color: #898994;
+    margin: 3px 0;
+}
+
