--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@ a:hover.button-style{
     background-color: #E02C6D;
     padding: 10px 24px;
     border-radius: 20px;
+    margin-top: 20px;
     display: inline-block;
 }
 .button-style i{
@@ -94,13 +95,19 @@ banner-section css strat here
     padding-right: 20px;
 }
 
-#banner-image{
+.banner-bg{
     display: flex;
     justify-content: center;
-    align-items: center;
+    position: relative;
+    
 }
-.banner-item img{
-    width: 70%;
+.banner-image{
+    position: absolute;
+    top: 72px;
+    right: 74px;
+}
+.banner-image img{
+    width: 90%;
     
 }
 
@@ -185,6 +192,16 @@ banner-section css strat here
     color: #898994;
     margin: 3px 0;
 }
+.collections-button{
+    width: 85%;
+    margin: 50px auto;
+    background-color: #fff;
+    text-align: right;
+}
+.collections-button a{
+    color: #E02C6D;
+    
+}
 /*----------------------------------
  collection style end here 
 ------------------------------------ */
@@ -223,3 +240,102 @@ banner-section css strat here
     color: #fff;
     background-color: #22203B;
 }
+
+
+
+/*----------------------
+ media query css start here 
+ ------------------------- */
+
+
+
+
+ /* responsive mobile  */
+ @media only screen and (max-width: 576px) {
+     /* header mobile menu  */
+
+     .main-header{
+         align-items: center;
+         
+     }
+     .margin-y{
+         margin: 35px 0;
+     }
+    .mobile-menu i{
+        color: #1B1B1B;
+        font-size: 24px;
+    }
+    .menu-bar {
+      display: none;
+    }
+    .mobile-cart li{
+        list-style: none;
+    }
+    .mobile-cart li a i{
+        color: #000000;
+        font-size: 26px;
+    }
+   
+    /* top section mobile menu  */
+    .top-section{
+        flex-direction: column;
+        
+    }
+    .banner-item{
+        width: 100%;
+    }
+    #banner-details{
+        order: 2;
+    }
+    #banner-image{
+        order: 1;
+    }
+    #banner-details h2{
+        font-size: 28px;
+    }
+    .banner-image img{
+        width: 100%;
+        
+    }
+    .banner-bg img{
+        width: 100%;
+        padding: 25px;
+    }
+    .banner-item{
+        text-align: center;
+    }
+
+    /* company brand section  */
+
+    .company-brand{
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .brand-logo{
+        margin-top: 15px;
+        margin-right: 10px;
+    }
+    .brand-logo img{
+        width: 60%;
+    }
+
+
+    /* collection area mobile style start here  */
+
+    .collections{
+        grid-template-columns: repeat(1,1fr);
+    }
+
+    
+  }
+
+
+
+  /* responsive tablet  */
+
+  @media only screen and (min-width: 576px) and (max-width: 768px)  {
+    body{
+        background-color: green;
+    }
+   
+    }
